<resources>
    <string name="app_name">Shivpal Singh Yadav</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_biography">Biography</string>
    <string name="title_activity_political_career">Political Career</string>
    <string name="title_activity_samajwadi_party">Samajwadi Party</string>
    <string name="title_activity_events">News Room</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_ImageGallary">Prints</string>
    <string name="title_activity_OngoingProjects">Ongoing Projects</string>
    <string name="FACEBOOK_TITLE">Facebook</string>
    <string name="GOOGLE_PLUS_TITLE">Google Plus</string>
    <string name="TWITTER_TITLE">Twitter</string>
    <string name="Birth">Biography:</string>
    <string name="LANGUAGE_ENGLISH_STRING">English</string>
    <string name="LANGUAGE_HINDI_STRING">हिंदी</string>
    <string name="Birth_Info">\t\tAn honored human being, a maverick socialist and an esteemed political leader are phrases that have long been and still are synonymous to Shivpal Singh Yadav. Having been born in the post-independence era to a nationalist and farmer at-heart father, it didn’t take him long before he entered the political movement and with Mr. Mulayam Singh Yadav as his mentor, he never shied away from the truth and worked his way wonderfully through India’s political struggle to post-independence social and economic issues with an unsaid enthusiasm and dedication.</string>
    <string name="Education">Early Life:</string>
    <string name="Education_Info">\t\tSon of Mr.Sughar Singh and Mrs.Murti Devi was born on basant panchami in 1955 in Etawah, Uttar Pradesh. His mother, was a perfect home maker. At a young age, Shivpal’s elder brother, who was a nationalist, introduced him to Uttar Pradesh political movement through various rallies and protest assemblies.\n\t\tThe turning point in his life came when his elder brother, an impassioned follower of RAM MANOHAR LOHIA, took him along on a meeting. Deeply inspired by lohia’s personality and beliefs, Shivpal ji took his values and principles to heart which helped him come through the testing times and supported him in many of his endeavors in future. At a very young age, he participated in the meetings and rallies and proved both, his loyalty to Mulayam Singh Yadav’s and his metal as a significant pro-lohia ideology fighter in the time to come.</string>
    <string name="Family">Educational Qualification:</string>
    <string name="Family_Info">\t\tIn 1974 he attended the Jain Inter College, Karhal Mainpuri (UP) to complete his intermediate course work after standing first class in his school’s matric examinations. He, then completed his graduation in from K.K.Degree College, Etawah (Kanpur University) in 1976 and went to Lucknow University to pursue his bachelor of physical education and completed it in 1977.</string>
    <string name="FAMILY_STATUS">Family Status:</string>
    <string name="FAMILY_STATUS_INFO">\t\tShivpal ji married Mrs. Sarla Yadav on the 23rd may 1981. They are blessed with two children Dr.Anubha Yadav who is a medical practitioner by profession working for the upliftment of the masses and Mr. Aditya Yadav symbolizes the youth of today; and his versatility in multiple genres is what has lead him to accomplish the various path breaking noble causes at such a young age. He is an elected chairman of the Uttar Pradesh cooperative Federation.</string>
    <string name="Political_Career">Political Career:</string>
    <string name="Political_Career_Info">\t\tBeing a multi-talented political personality, Mr.Shivpal Singh Yadav has served as a member of the Uttar Pradesh legislative for almost 20 years. From this politician’s journey, it can be seen that he is one of the most respectable and admirable people in India. He has been a participant in a number of social activities and has served as a member of various reputed councils and organizations. Along with political activity, he is also a writer and a brilliant orator. He has maintained a clean image among the public, who consider him as a national leader, highly knowledgeable on democracy, religion and liberal views.\n\n\t\tIn 1988 he was elected as the president of the district Sehkari bank and successfully completed his tenure in 1991. In 1995 he took over as the president of district panchayat. He contested election in the 13th vidhan sabha from Jaswant Nagar and won by huge margins and was appointed as general secretary of the samjwadi party in Uttar Pradseh. In the year 2009 when the then state president passed away shivapal ji was appointed the president of the Uttar Pradesh sawajwadi party unit and followed the lines set by his mentor and party president Mr.Mulayam Singh Yadav. On seeing his dedication and love for the party he was appointed as the leader of the opposition.\n\n\t\tHe proved his mettle on all the fronts which were given to him with great spirit and enthusiasm .As leader of the opposition he fought on issues related to poverty,women empowerment, upliftment of the down trodden.In 2012 when samajwadi party took the reins of Uttar Pardesh in full majority he was appointed  cabinet minister for departments like irrigation and PWD. He is also a key member of the government for handling all issues related to state and party welfare. His far sited vision and the role to eradicate poverty from the state has earned him respect among collogues and bureaucrats. Though he is a strict task master but is also known for his gentle and humble nature.\n\n\t\tThe word samajwadi will always sound incomplete without the mention of his name.</string>
    <string name="About">About:</string>
    <string name="About_Info">Samajwadi Party came into existence on October 4, 1992 in Lucknow under the leadership of Shri Mulayam Singh Yadav.</string>
    <string name="Decription">Description:</string>
    <string name="Description_Info">The Samajwadi Party believes in creating a socialist society, which works on the principle of equality and the party has a secular and democratic outlook. The Samajwadi Party believes in continuously working towards the upliftment of weaker sections of society and it stands against communal forces.\n\n

Freedom fighter, socialist and a great Parliamentarian, Ram Manohar Lohia is a guiding light for the Samajwadi Party. Ram Manohar Lohia’s integrity, selfless struggle for India’s independence and his ability to unite people of all sections of society has greatly influenced the leaders, youth and workers in the party. Lohia was jailed by the British several times during the freedom struggle and he fought rigorously all his life for social equality.\n\n

Mahatma Gandhi’s ideas greatly influenced Lohia who worked tirelessly during the freedom movement writing articles against the British, raising awareness against British imperialism in Europe, and after India became independent devoted himself to grassroots politics which included farmers cause, development work and fighting against social injustice. He also worked towards putting an end to capitalist-feudalistic tendencies.\n\n

Lohia’s ability to awaken the people with his fiery articles on Satyagraha and his innate knowledge of social problems made him the foremost socialist leader of India. Lohia’s ‘Do or Die’ spirit is an inspiration and a guiding force for the Samajwadi Party in its struggle for social upliftment of the poor, backward and socially weaker sections of society.</string>
    <string name="RESIDENCE_ADDRESS">7, Kalidas Marg,\nHazratganj,\nLucknow.\nPIN: 226001\nPhone: 0522-2239994\n\t\t\t\t\t0522-2235567</string>
    <string name="RESIDENCE_TITLE">Residence Address:</string>
    <string name="OFFICE_TITLE">Office Address:</string>
    <string name="OFFICE_ADDRESS">Room No -99/100,\nVidhan Bhawan,\nLucknow.\nPIN: 226001\nPhone: 0522-2238088\n\t\t\t\t\t0522-2213272</string>
    <string name="title_activity_media">In Media</string>
    <string name="title_activity_photo_gallary">Photo Gallary</string>
    <string name="title_activity_video_gallary">Video Gallary</string>
    <string name="title_activity_social_media">Social Media</string>
    <string name="title_activity_web_view">Social Media</string>
    <string name="title_activity_launcher_image">Shivpal Singh Yadav</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="VIDHAN_BHAVAN">Constituency</string>
    <string name="title_activity_department">Departments</string>
    <string name="NETWORK_ERROR">The requested operation failed, please check your internet connection or network signal strength.</string>
    <string name="title_activity_vidhan_sabha">Constituency</string>
    <string name="Vidhan_Sabha_Area">Jaswant Nagar (199)</string>
     <string name="PARTY_WEBSITE_TITLE">Website:</string>
    <string name="PARTY_WEBSITE_URL">http://www.samajwadiparty.in/</string>
    <string name="PERSONAL_WEBSITE_URL">http://shivpalsinghyadav.com/</string>
    <string name="DOWNLOAD_PDF">Download Pdf</string>
    <string name="Public_Works_Department">Public Works Department</string>
    <string name="Irrigation">Irrigation</string>
    <string name="Co_operative">Co-operative</string>
    <string name="Land_Development_Water_Resources">Land Development And Water Resources</string>
    <string name="Flood_Control">Flood Control</string>
    <string name="Irrigation_Mechanical">Irrigation (Mechanical)</string>
    <string name="Revenue">Revenue</string>
    <string name="Uttar_Pradesh_Cooperative_Federation_Limited">Uttar Pradesh Cooperative Federation Limited</string>
    <string name="Sodic_Ravine_Land_development">Sodic And Ravine Land development</string>
    <string name="Waste_Land_Development">Waste Land Development</string>
    <string name="Disaster_Rehabilitation">Disaster And Rehabilitation</string>
    <string name="Public_Service_Management">Public Service Management</string>
    <string name="Vidhan_Sabha_Booth_Num">Booth No.</string>
   <string name="Vidhan_Sabha_Booth_Name">Part Name</string>
     <string name="IN_MEDIA_URL">http://dummy-class.herokuapp.com/media</string>
     <string name="GET_EVENTS_DATA_URL">https://dummy-class.herokuapp.com/events_list_trial</string>
</resources>