<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SamajwadiPartyActivity" >

    <include
        android:id="@+id/headerContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        layout="@layout/header_home" />

    <ImageView
        android:id="@+id/sPartyHeadImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerContainer"
        android:src="@drawable/party_banner" />

    <ScrollView
        android:id="@+id/partyScrView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/sPartyHeadImageView"
        android:background="@android:drawable/picture_frame"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/websiteTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#bfd5ee"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/PARTY_WEBSITE_TITLE"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/partyWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:fontFamily="sans-serif-light"
                android:onClick="partyURLClicked"
               
                android:text="@string/PARTY_WEBSITE_URL"
                android:textColor="#0000FF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/aboutTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#bfd5ee"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/About"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/aboutInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/About_Info"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="25dp"
                android:background="#bfd5ee"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/Decription"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/descInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/Description_Info"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>